# Progetto

./: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  Collider.cpp  Collider.h  Entity.cpp  Entity.h  GameCharacter.cpp  GameCharacter.h  Platform.cpp  Platform.h  SpriteParameters.h  Structure.h  gameValues.h  main.cpp
unit_test/: Animation.cpp  Animation.h  CMakeLists.txt  runAllTests.cpp
unit_test/lib/: GameCharacter.cpp  GameCharacter.h
